added boilerplate with basic content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello, Sujit here!
+<html>
+  <head>
+    <title>Sujit Chowdhury - Homepage</title>
+  </head>
+  <body>
+    <img
+      src="https://www.iitp.ac.in/~halder/phd_image/sujit.jpg"
+      height="100px"
+    />
+    <h1>Sujit Chowdhury</h1>
+    <h3>PhD Scholar</h3>
+    <h3>Department of Computer Science &amp; Technology</h3>
+    <h4>Indian Institute of Technology Patna, India</h4>
+  </body>
+</html>
