--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <html>
-  <head>
-    <title>Sujit Chowdhury - Homepage</title>
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <img
-      src="https://www.iitp.ac.in/~halder/phd_image/sujit.jpg"
-      height="100px"
-    />
-    <h1>Sujit Chowdhury</h1>
-    <h3>PhD Scholar</h3>
-    <h3>Department of Computer Science &amp; Technology</h3>
-    <h4>Indian Institute of Technology Patna, India</h4>
-  </body>
+    <head>
+        <title>Sujit Chowdhury - Homepage</title>
+
+        <!-- Main CSS -->
+        <link href="index.css" rel="stylesheet" type="text/css" />
+
+        <!-- Bootstrap CSS only -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+            crossorigin="anonymous"
+        />
+    </head>
+    <body>
+        <div class="container">
+            <div class="head row">
+                <div class="col-4 head-img">
+                    <img src="https://www.iitp.ac.in/~halder/phd_image/sujit.jpg" />
+                </div>
+                <div class="col-8 head-content">
+                    <h2>Sujit Chowdhury</h2>
+                    <h4>PhD Scholar</h4>
+                    <h6>Department of Computer Science &amp; Technology</h6>
+                    <h6>Indian Institute of Technology Patna, India</h6>
+                </div>
+            </div>
+            <div class="row justify-content-center about">
+                <div class="col-10">
+                    <p class="about-text">
+                        Hi, I'm Sujit Chowdhury, a researcher, working in the field of blockchain, medical image analysis, image processing, machine learning, and distributed learning. I'm passionate about taking the new challenges and providing solutions for them. I like to listen to music, roam around, play games, and sometimes cook during my spare time.  
+                    </p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
