--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         .publication {
             margin-bottom: 1rem;
         }
+        .btn-resume {
+            margin-top: 1rem;
+        }
     </style>
 </head>
 <body>
@@ -34,7 +37,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4 text-center">
-                    <img src="https://www.iitp.ac.in/~halder/phd_image/sujit.jpg" alt="Sujit Chowdhury" class="img-fluid profile-img">
+                    <img src="https://github.com/sujit880/sujit880.github.io/blob/main/my_pic_sujit.jpeg" alt="Sujit Chowdhury" class="img-fluid profile-img">
                 </div>
                 <div class="col-md-8">
                     <h1>Sujit Chowdhury</h1>
@@ -42,6 +45,7 @@
                     <p>Department of Computer Science &amp; Technology</p>
                     <p>Indian Institute of Technology Patna, India</p>
                     <p>Email: sujit.chowdhury@example.com</p>
+                    <a href="sujit880/sujit880.github.io/Sujit_Résumé.pdf" class="btn btn-primary btn-resume" target="_blank">View Resume</a>
                 </div>
             </div>
         </div>
@@ -94,6 +98,7 @@
             <p>
                 <a href="https://www.linkedin.com/in/sujit-chowdhury" target="_blank" class="btn btn-primary">LinkedIn</a>
                 <a href="https://github.com/sujit-chowdhury" target="_blank" class="btn btn-secondary">GitHub</a>
+                <a href="path/to/your/resume.pdf" class="btn btn-success" target="_blank">Download Resume</a>
             </p>
         </section>
     </main>
