--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4 text-center">
-                    <img src="https://sujit880.github.io/my_pic_sujit.jpeg" alt="Sujit Chowdhury" class="img-fluid profile-img">
+                    <img src="my_pic_sujit.jpeg" alt="Sujit Chowdhury" class="img-fluid profile-img">
                 </div>
                 <div class="col-md-8">
                     <h1>Sujit Chowdhury</h1>
@@ -45,7 +45,7 @@
                     <p>Department of Computer Science &amp; Technology</p>
                     <p>Indian Institute of Technology Patna, India</p>
                     <p>Email: sujit.chowdhury@example.com</p>
-                    <a href="https://sujit880.github.io/Sujit_Résumé.pdf" class="btn btn-primary btn-resume" target="_blank">View Resume</a>
+                    <a href="Sujit_Résumé.pdf" class="btn btn-primary btn-resume" target="_blank">View Resume</a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
             <p>
                 <a href="https://www.linkedin.com/in/sujit-chowdhury" target="_blank" class="btn btn-primary">LinkedIn</a>
                 <a href="https://github.com/sujit-chowdhury" target="_blank" class="btn btn-secondary">GitHub</a>
-                <a href="path/to/your/resume.pdf" class="btn btn-success" target="_blank">Download Resume</a>
+                <a href="Sujit_Résumé.pdf" class="btn btn-success" target="_blank">Download Resume</a>
             </p>
         </section>
     </main>
