--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <h3>PhD Scholar</h3>
                     <p>Department of Computer Science &amp; Technology</p>
                     <p>Indian Institute of Technology Patna, India</p>
-                    <p>Email: sujit.chowdhury@example.com</p>
-                    <a href="Sujit_Résumé.pdf" class="btn btn-primary btn-resume" target="_blank">View Resume</a>
+                    <p>Email: sujit_2021cs35@iitp.ac.in</p>
+                    <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-primary btn-resume" target="_blank">View Resume</a>
                 </div>
             </div>
         </div>
@@ -71,13 +71,13 @@
         <section id="publications" class="mt-5">
             <h2 class="section-title">Selected Publications</h2>
             <div class="publication">
-                <strong>Chowdhury, S.</strong>, et al. (2023). "Novel Blockchain-based Approach for Secure Medical Image Sharing." <em>Journal of Medical Imaging</em>, 10(2), 123-145.
+                <strong>Chowdhury, S.</strong>, et al. (2024). "FedSat: A Statistical Aggregation Approach for Class Imbalaced Clients in Federated Learning." <em>Arxived</em>
             </div>
             <div class="publication">
-                <strong>Chowdhury, S.</strong>, et al. (2022). "Distributed Learning Techniques for Large-Scale Image Processing." <em>IEEE Transactions on Image Processing</em>, 31(5), 789-801.
+                <strong>Chowdhury, S.</strong>, et al. (2022). "FedRLChain: Secure Federated Deep Reinforcement Learning with BlockChain." <em>IEEE Transactions on Services Computing</em>
             </div>
             <div class="publication">
-                <strong>Chowdhury, S.</strong>, et al. (2021). "Machine Learning Approaches in Blockchain-enabled Healthcare Systems." <em>International Conference on Artificial Intelligence in Medicine</em>, 56-68.
+                <strong>Chowdhury, S.</strong>, et al. (2021). "Key moment extraction for designing an agglomerative clustering algorithm-based video summarization framework." <em>Neural Computing and Applications</em>, pp. 1–22, 2021.
             </div>
         </section>
 
@@ -96,9 +96,9 @@
             <p>Email: sujit.chowdhury@example.com</p>
             <p>Office: Room 301, Computer Science Building, IIT Patna</p>
             <p>
-                <a href="https://www.linkedin.com/in/sujit-chowdhury" target="_blank" class="btn btn-primary">LinkedIn</a>
-                <a href="https://github.com/sujit-chowdhury" target="_blank" class="btn btn-secondary">GitHub</a>
-                <a href="Sujit_Résumé.pdf" class="btn btn-success" target="_blank">Download Resume</a>
+                <a href="www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-primary">LinkedIn</a>
+                <a href="https://github.com/sujit880" target="_blank" class="btn btn-secondary">GitHub</a>
+                <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-success" target="_blank">Download Resume</a>
             </p>
         </section>
     </main>
