--- a/index.html
+++ b/index.html
@@ -60,24 +60,26 @@
         <section id="research" class="mt-5">
             <h2 class="section-title">Research Interests</h2>
             <ul>
+                <li>Federated Learning</li>
+                <li>Reinforcement Learning</li>
                 <li>Blockchain Technology</li>
                 <li>Medical Image Analysis</li>
                 <li>Image Processing</li>
                 <li>Machine Learning</li>
-                <li>Distributed Learning</li>
+                <li>Secure Distributed Learning</li>
             </ul>
         </section>
 
         <section id="publications" class="mt-5">
             <h2 class="section-title">Selected Publications</h2>
             <div class="publication">
-                <strong>Chowdhury, S.</strong>, et al. (2024). "FedSat: A Statistical Aggregation Approach for Class Imbalaced Clients in Federated Learning." <em>Arxived</em>
+                <strong>Sujit Chowdhury</strong>, et al. (2024). "FedSat: A Statistical Aggregation Approach for Class Imbalaced Clients in Federated Learning." <em>Arxived</em>
             </div>
             <div class="publication">
-                <strong>Chowdhury, S.</strong>, et al. (2022). "FedRLChain: Secure Federated Deep Reinforcement Learning with BlockChain." <em>IEEE Transactions on Services Computing</em>
+                <strong>Sujit Chowdhury</strong>, et al. (2022). "FedRLChain: Secure Federated Deep Reinforcement Learning with BlockChain." <em>IEEE Transactions on Services Computing</em>
             </div>
             <div class="publication">
-                <strong>Chowdhury, S.</strong>, et al. (2021). "Key moment extraction for designing an agglomerative clustering algorithm-based video summarization framework." <em>Neural Computing and Applications</em>, pp. 1–22, 2021.
+                <strong>Sujit Chowdhury</strong>, et al. (2021). "Key moment extraction for designing an agglomerative clustering algorithm-based video summarization framework." <em>Neural Computing and Applications</em>, pp. 1–22, 2021.
             </div>
         </section>
 
@@ -85,16 +87,16 @@
             <h2 class="section-title">Education</h2>
             <ul>
                 <li>PhD in Computer Science (Ongoing)<br>Indian Institute of Technology Patna, India</li>
-                <li>M.Tech in Computer Science and Engineering<br>XYZ University, India</li>
-                <li>B.Tech in Computer Science and Engineering<br>ABC University, India</li>
+                <li>M.Tech in Computer Science and Engineering<br>Indian Institute Of Engineering Science and Technology, India</li>
+                <li>B.Tech in Computer Science and Engineering<br>Jalpaiguri Government Engineering College, India</li>
             </ul>
         </section>
 
         <section id="contact" class="mt-5 mb-5">
             <h2 class="section-title">Contact</h2>
             <p>Feel free to reach out to me for research collaborations or inquiries.</p>
-            <p>Email: sujit.chowdhury@example.com</p>
-            <p>Office: Room 301, Computer Science Building, IIT Patna</p>
+            <p>Email: sujit_2021cs35@iitp.ac.in</p>
+            <p>Office: Room 412, Block-2, Computer Science Building, IIT Patna</p>
             <p>
                 <a href="www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-primary">LinkedIn</a>
                 <a href="https://github.com/sujit880" target="_blank" class="btn btn-secondary">GitHub</a>
