--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p>Email: sujit_2021cs35@iitp.ac.in</p>
             <p>Office: Room 412, Block-2, Computer Science Building, IIT Patna</p>
             <p>
-                <a href="www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-primary">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-primary">LinkedIn</a>
                 <a href="https://github.com/sujit880" target="_blank" class="btn btn-secondary">GitHub</a>
                 <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-success" target="_blank">Download Resume</a>
             </p>
