--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <section id="publications" class="mt-5">
             <h2 class="section-title">Selected Publications</h2>
             <div class="publication">
-                <strong>Sujit Chowdhury</strong>, et al. (2024). "FedSat: A Statistical Aggregation Approach for Class Imbalaced Clients in Federated Learning." <em>Arxived</em>
+                <strong>Sujit Chowdhury</strong>, et al. (2024). "FedSat: A Statistical Aggregation Approach for Class Imbalaced Clients in Federated Learning." <em>Arxived</em> (Under Review)
             </div>
             <div class="publication">
-                <strong>Sujit Chowdhury</strong>, et al. (2022). "FedRLChain: Secure Federated Deep Reinforcement Learning with BlockChain." <em>IEEE Transactions on Services Computing</em>
+                <strong>Sujit Chowdhury</strong>, et al. (2022). "FedRLChain: Secure Federated Deep Reinforcement Learning with BlockChain." <em>IEEE Transactions on Services Computing.</em>
             </div>
             <div class="publication">
                 <strong>Sujit Chowdhury</strong>, et al. (2021). "Key moment extraction for designing an agglomerative clustering algorithm-based video summarization framework." <em>Neural Computing and Applications</em>, pp. 1–22, 2021.
