--- a/index_old1.html
+++ b/index_old1.html
@@ -5,64 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sujit Chowdhury - Research Scholar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
-            line-height: 1.8;
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #f8f9fa 40%, #e9ecef 100%);
-            scroll-behavior: smooth;
         }
         .header {
-            background-color: #007bff;
-            padding: 3rem 0;
-            color: white;
+            background-color: #f8f9fa;
+            padding: 2rem 0;
         }
         .profile-img {
-            max-width: 180px;
+            max-width: 200px;
             border-radius: 50%;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         .section-title {
-            font-weight: 600;
-            color: #007bff;
-            border-bottom: 3px solid #007bff;
+            border-bottom: 2px solid #007bff;
             padding-bottom: 0.5rem;
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
+        }
+        .publication {
+            margin-bottom: 1rem;
         }
         .btn-resume {
             margin-top: 1rem;
-            background-color: #28a745;
-            color: white;
-        }
-        .btn-resume:hover {
-            background-color: #218838;
-        }
-        .publication {
-            background-color: #ffffff;
-            padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 1.5rem;
-        }
-        footer {
-            background-color: #343a40;
-            color: white;
-            padding: 1.5rem 0;
-        }
-        .footer p {
-            margin: 0;
-        }
-        a {
-            text-decoration: none;
-            color: white;
-        }
-        a:hover {
-            color: #e2e2e2;
-        }
-        .btn-link {
-            margin: 0.5rem;
         }
     </style>
 </head>
@@ -78,8 +44,8 @@
                     <h3>PhD Scholar</h3>
                     <p>Department of Computer Science &amp; Technology</p>
                     <p>Indian Institute of Technology Patna, India</p>
-                    <p>Email: <a href="mailto:sujit_2021cs35@iitp.ac.in" class="text-white">sujit_2021cs35@iitp.ac.in</a></p>
-                    <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-resume" target="_blank">View Resume</a>
+                    <p>Email: sujit_2021cs35@iitp.ac.in</p>
+                    <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-primary btn-resume" target="_blank">View Resume</a>
                 </div>
             </div>
         </div>
@@ -131,14 +97,14 @@
             <p>Email: sujit_2021cs35@iitp.ac.in</p>
             <p>Office: Room 412, Block-2, Computer Science Building, IIT Patna</p>
             <p>
-                <a href="https://www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-link btn-primary">LinkedIn</a>
-                <a href="https://github.com/sujit880" target="_blank" class="btn btn-link btn-secondary">GitHub</a>
-                <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-link btn-success" target="_blank">Download Resume</a>
+                <a href="https://www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-primary">LinkedIn</a>
+                <a href="https://github.com/sujit880" target="_blank" class="btn btn-secondary">GitHub</a>
+                <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-success" target="_blank">Download Resume</a>
             </p>
         </section>
     </main>
 
-    <footer class="bg-dark text-center py-3">
+    <footer class="bg-light text-center py-3">
         <div class="container">
             <p>&copy; 2023 Sujit Chowdhury. All rights reserved.</p>
         </div>
