--- a/index.html
+++ b/index.html
@@ -1,71 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sujit Chowdhury - Research Scholar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.8;
             color: #333;
-            background: linear-gradient(135deg, #f8f9fa 40%, #e9ecef 100%);
-            scroll-behavior: smooth;
+            background-color: #f4f6f9;
         }
+
         .header {
             background-color: #007bff;
-            padding: 3rem 0;
-            color: white;
+            padding: 2rem 0;
+            color: #fff;
         }
+
         .profile-img {
             max-width: 180px;
             border-radius: 50%;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
         }
-        .section-title {
-            font-weight: 600;
-            color: #007bff;
-            border-bottom: 3px solid #007bff;
-            padding-bottom: 0.5rem;
-            margin-bottom: 2rem;
-        }
-        .btn-resume {
-            margin-top: 1rem;
-            background-color: #28a745;
-            color: white;
-        }
-        .btn-resume:hover {
-            background-color: #218838;
-        }
-        .publication {
-            background-color: #ffffff;
-            padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 1.5rem;
-        }
-        footer {
-            background-color: #343a40;
-            color: white;
-            padding: 1.5rem 0;
-        }
-        .footer p {
+
+        h1,
+        h3 {
             margin: 0;
         }
-        a {
-            text-decoration: none;
-            color: white;
+
+        .header h1 {
+            font-size: 2.5rem;
         }
+
+        .header h3 {
+            font-size: 1.5rem;
+            color: #e9e9e9;
+        }
+
+        .section-title {
+            border-bottom: 3px solid #007bff;
+            padding-bottom: 0.5rem;
+            margin-bottom: 1.5rem;
+            font-size: 1.8rem;
+            font-weight: 500;
+        }
+
+        .publication {
+            margin-bottom: 1rem;
+        }
+
+        .btn-resume {
+            margin-top: 1rem;
+            padding: 0.7rem 1.5rem;
+            border-radius: 20px;
+            font-weight: bold;
+        }
+
+        .btn-primary,
+        .btn-secondary,
+        .btn-success {
+            transition: all 0.3s ease;
+        }
+
+        .btn-primary:hover,
+        .btn-secondary:hover,
+        .btn-success:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+            color: #fff;
+        }
+
+        /* Hover effects */
         a:hover {
-            color: #e2e2e2;
+            text-decoration: none;
         }
-        .btn-link {
-            margin: 0.5rem;
+
+        a:hover,
+        a:focus {
+            color: #0056b3;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li::before {
+            content: "•";
+            color: #007bff;
+            font-weight: bold;
+            display: inline-block;
+            width: 1em;
+            margin-left: -1em;
+        }
+
+        section {
+            padding: 2rem 0;
+        }
+
+        footer {
+            background-color: #007bff;
+            color: #fff;
+            padding: 1rem 0;
+        }
+
+        .contact-links a {
+            margin-right: 1rem;
+        }
+
+        .contact-links a:hover {
+            color: #e9e9e9;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .header h1 {
+                font-size: 2rem;
+            }
+
+            .header h3 {
+                font-size: 1.3rem;
+            }
         }
     </style>
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -78,8 +140,9 @@
                     <h3>PhD Scholar</h3>
                     <p>Department of Computer Science &amp; Technology</p>
                     <p>Indian Institute of Technology Patna, India</p>
-                    <p>Email: <a href="mailto:sujit_2021cs35@iitp.ac.in" class="text-white">sujit_2021cs35@iitp.ac.in</a></p>
-                    <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-resume" target="_blank">View Resume</a>
+                    <p>Email: sujit_2021cs35@iitp.ac.in</p>
+                    <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing"
+                        class="btn btn-light btn-resume" target="_blank">View Resume</a>
                 </div>
             </div>
         </div>
@@ -106,10 +169,10 @@
         <section id="publications" class="mt-5">
             <h2 class="section-title">Selected Publications</h2>
             <div class="publication">
-                <strong>Sujit Chowdhury</strong>, et al. (2024). "FedSat: A Statistical Aggregation Approach for Class Imbalaced Clients in Federated Learning." <em>Arxived</em> (Under Review)
+                <strong>Sujit Chowdhury</strong>, et al. (2024). "FedSat: A Statistical Aggregation Approach for Class Imbalanced Clients in Federated Learning." <em>Arxived</em> (Under Review)
             </div>
             <div class="publication">
-                <strong>Sujit Chowdhury</strong>, et al. (2022). "FedRLChain: Secure Federated Deep Reinforcement Learning with BlockChain." <em>IEEE Transactions on Services Computing.</em>
+                <strong>Sujit Chowdhury</strong>, et al. (2022). "FedRLChain: Secure Federated Deep Reinforcement Learning with Blockchain." <em>IEEE Transactions on Services Computing.</em>
             </div>
             <div class="publication">
                 <strong>Sujit Chowdhury</strong>, et al. (2021). "Key moment extraction for designing an agglomerative clustering algorithm-based video summarization framework." <em>Neural Computing and Applications</em>, pp. 1–22, 2021.
@@ -130,11 +193,11 @@
             <p>Feel free to reach out to me for research collaborations or inquiries.</p>
             <p>Email: sujit_2021cs35@iitp.ac.in</p>
             <p>Office: Room 412, Block-2, Computer Science Building, IIT Patna</p>
-            <p>
-                <a href="https://www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-link btn-primary">LinkedIn</a>
-                <a href="https://github.com/sujit880" target="_blank" class="btn btn-link btn-secondary">GitHub</a>
-                <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-link btn-success" target="_blank">Download Resume</a>
-            </p>
+            <div class="contact-links">
+                <a href="https://www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-primary">LinkedIn</a>
+                <a href="https://github.com/sujit880" target="_blank" class="btn btn-secondary">GitHub</a>
+                <a href="https://drive.google.com/file/d/1OYixC0woiajLtQFiAy67Eubt9h4cwkxG/view?usp=sharing" class="btn btn-success" target="_blank">Download Resume</a>
+            </div>
         </section>
     </main>
 
@@ -146,4 +209,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
