--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         }
 
         .header {
-            background-color: #007bff;
+            /* background-color: #007bff; */
+            background-color: rgba(0, 123, 255, 0.65); /* Set opacity to 85% */
             padding: 2rem 0;
             color: #fff;
         }
