--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </section>
 
         <section id="publications" class="mt-5">
-            <h2 class="section-title">Selected Publications</h2>
+            <h2 class="section-title">Publications</h2>
             <div class="publication">
                 <strong>Sujit Chowdhury</strong>, et al. (2024). "FedSat: A Statistical Aggregation Approach for Class Imbalanced Clients in Federated Learning." <em>Arxived</em> (Under Review)
             </div>
@@ -192,7 +192,7 @@
         <section id="contact" class="mt-5 mb-5">
             <h2 class="section-title">Contact</h2>
             <p>Feel free to reach out to me for research collaborations or inquiries.</p>
-            <p>Email: sujit_2021cs35@iitp.ac.in</p>
+            <p>Email: sujit_2021cs35@iitp.ac.in; sujitgopal880@gmail.com</p>
             <p>Office: Room 412, Block-2, Computer Science Building, IIT Patna</p>
             <div class="contact-links">
                 <a href="https://www.linkedin.com/in/sujit-chowdhury-bbb624b7" target="_blank" class="btn btn-primary">LinkedIn</a>
